--- a/themes/dbwebb/index.twig
+++ b/themes/dbwebb/index.twig
@@ -78,7 +78,7 @@
                 {% endfor %}
             </div>
             <p>
-                En footer med lite text.
+                En footer med lite tex
             </p>
         </div>
     </div>
