--- a/themes/dbwebb/index.twig
+++ b/themes/dbwebb/index.twig
@@ -63,7 +63,9 @@
     </div>
     <div class="main" role="main">
         <div class="container">
-            {{ content }}
+          <div class="auto alert">
+            <h1 class="auto">Alert!</h1>
+          </div>
         </div>
     </div>
     <div class="footer">
