--- a/themes/martin/index.twig
+++ b/themes/martin/index.twig
@@ -17,7 +17,7 @@
         <link rel="canonical" href="{{ current_page.url }}" />
     {% endif %}
 
-    <link rel="stylesheet" href="{{ theme_url }}/../shared/css/font-awsome.min.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="{{ theme_url }}/../shared/css/font-awsome.min.css" type="text/css" />
     <!-- Insert font choice here -->
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End -->
@@ -34,6 +34,7 @@
     </a>
     <div id="nav" role="navigation" tabindex="-1">
         <ul>
+          <i class="fab fa-mixer" style="color: #789"></i>
             {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
             <li{% if page.id == current_page.id %} class="active" {% endif %}>
                 <a href="{{ page.url }}">{{ page.title }}</a>
@@ -44,21 +45,27 @@
     </header>
     <div class="main" id="main" role="main">
         <div class="container">
-            {{ content }}
+          {{content}}
         </div>
     </div>
     <footer class="site-footer">
-      <div class="social">
-          <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
+        <p>Klicka på ikonerna för att komma till github repot och min instagram!</p>
+        <div class="social">
           {% for social in pages["_meta"].meta.social %}
-              <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-                  <i class="fa fa-{{ social.icon }}" aria-hidden="true"></i>
-                  <span class="sr-only">{{ social.title }}</span>
-              </a>
-          {% endfor %}
-          
-      </div>
-        <p>Klicka på iconen för att komma till github repot!</p>
+            <a href="{{ social.url }}" title="{{ social.title }}" role="button">
+              <i class="{{ social.icon }}"  aria-hidden="true"></i>
+              <span class="sr-only">{{ social.title }}</span>
+            </a>
+            {% endfor %}
+            {% for social2 in pages["_meta"].meta.social2 %}
+                <a href="{{ social2.url }}" title="{{ social2.title }}" role="button">
+                    <i class="{{ social2.icon }}" aria-hidden="true"></i>
+                    <span class="sr-only">{{ social2.title }}</span>
+                </a>
+            {% endfor %}
+          </div>
+            <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
+
     </footer>
     <script src="{{ theme_url }}/../shared/js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
     <script src="{{ theme_url }}/../shared/js/utils.js" type="text/javascript"></script>
