--- a/themes/shared/scss/variables.scss
+++ b/themes/shared/scss/variables.scss
@@ -6,3 +6,4 @@ $black: #000;
 $white: #fff;
 $light-black: #002;
 $background-gray: rgba(211, 211, 211, 0.4);
+$background-gray1: rgba(211, 211, 211, 0.6);
