--- a/themes/martin/analys.twig
+++ b/themes/martin/analys.twig
@@ -26,6 +26,7 @@
     {% else %}
     <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
     {% endif %}
+
     <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
 
 </head>
@@ -48,25 +49,10 @@
     </div>
     </header>
     <div class="main" id="main" role="main">
-        <div class="kmom-container">
-          <div class="sidebar">
-            <a href="kmom01">Kmom01</a>
-            <a href="kmom02">Kmom02</a>
-            <a href="kmom03">Kmom03</a>
-            <a href="kmom04">Kmom04</a>
-            <a href="kmom05">Kmom05</a>
-            <a href="kmom06">Kmom06</a>
-            <a href="kmom10">Kmom10</a>
-          </div>
-          <div class="kmom">
-            {{content}}
-            <div class="next-previous">
-              <a href="kmom01"><i class="fas fa-chevron-left"></i></a>
-              <a href="kmom04"><i class="fas fa-chevron-right"></i></a>
-            </div>
-          </div>
+        <div class="container">
+          {{content}}
         </div>
-      </div>
+    </div>
     <footer class="site-footer">
         <p>Klicka på ikonerna för att komma till github repot och min instagram!</p>
         <div class="social">
@@ -76,14 +62,8 @@
               <span class="sr-only">{{ social.title }}</span>
             </a>
             {% endfor %}
-            {% for social2 in pages["_meta"].meta.social2 %}
-                <a href="{{ social2.url }}" title="{{ social2.title }}" role="button">
-                    <i class="{{ social2.icon }}" aria-hidden="true"></i>
-                    <span class="sr-only">{{ social2.title }}</span>
-                </a>
-            {% endfor %}
           </div>
-            <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
+            <!-- Lxoads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
 
     </footer>
     <script src="{{ theme_url }}/../shared/js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
