--- a/themes/martin/index.twig
+++ b/themes/martin/index.twig
@@ -21,7 +21,12 @@
     <!-- Insert font choice here -->
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End -->
+    {% if config.session.theme == "dark" %}
+    <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+    {% else %}
     <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% endif %}
+
     <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
 
 </head>
@@ -46,6 +51,11 @@
     <div class="main" id="main" role="main">
         <div class="container">
           {{content}}
+          {% if config.session.theme == "dark" %}
+          <img src="assets/img/dietmartin-black.jpg" width="300" height="280" alt="picture of Martin Guva edited" />
+          {% else %}
+          <img src="assets/img/dietmartin.JPG" width="300" height="280" alt="picture of Martin Guva edited" />
+          {% endif %}
         </div>
     </div>
     <footer class="site-footer">
@@ -57,14 +67,8 @@
               <span class="sr-only">{{ social.title }}</span>
             </a>
             {% endfor %}
-            {% for social2 in pages["_meta"].meta.social2 %}
-                <a href="{{ social2.url }}" title="{{ social2.title }}" role="button">
-                    <i class="{{ social2.icon }}" aria-hidden="true"></i>
-                    <span class="sr-only">{{ social2.title }}</span>
-                </a>
-            {% endfor %}
           </div>
-            <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
+            <!-- Lxoads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
 
     </footer>
     <script src="{{ theme_url }}/../shared/js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
