--- a/themes/martin/report.twig
+++ b/themes/martin/report.twig
@@ -21,7 +21,11 @@
     <!-- Insert font choice here -->
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End -->
+    {% if config.session.theme == "dark" %}
+    <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+    {% else %}
     <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% endif %}
     <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
 
 </head>
@@ -65,7 +69,6 @@
             {% endfor %}
           </div>
             <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
-
     </footer>
     <script src="{{ theme_url }}/../shared/js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
     <script src="{{ theme_url }}/../shared/js/utils.js" type="text/javascript"></script>
