--- a/themes/martin/kmom.twig
+++ b/themes/martin/kmom.twig
@@ -58,12 +58,8 @@
             <a href="kmom06">Kmom06</a>
             <a href="kmom10">Kmom10</a>
           </div>
-          <div class="kmom">
+          <div class="container">
             {{content}}
-            <div class="next-previous">
-              <a href="kmom01"><i class="fas fa-chevron-left"></i></a>
-              <a href="kmom04"><i class="fas fa-chevron-right"></i></a>
-            </div>
           </div>
         </div>
       </div>
