--- a/themes/martin/scss/style.scss
+++ b/themes/martin/scss/style.scss
@@ -5,6 +5,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import '../../shared/fontawesome/scss/solid';
 @import '../../shared/fontawesome/scss/regular';
 @import 'report';
+@import 'gallery';
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 
@@ -29,6 +30,10 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+img embed object video {
+    max-width: 100%;
 }
 
 .site-header {
@@ -79,4 +84,50 @@ body {
 .social {
     font-size: 1.5rem;
     padding: 1.5em;
+}
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.embed-container object {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 960px) {
+    h1 {
+        line-height: 100%;
+    }
+
+    .embed-container iframe object embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
