--- a/themes/martin/gallery.twig
+++ b/themes/martin/gallery.twig
@@ -103,7 +103,7 @@
           <div class="gallery-box6">
             <a href="{{ base_url }}/image/titian_nr6.jpg">
             <picture>
-                <source media="(min-width: 668px)" srcset="{{ base_url }}/image/titian_nr6.jpg">
+                <source media="(min-width: 668px)" srcset="{{ base_url }}/image/titian_nr6.jpg?w=959.99&h=543.8">
                 <source media="(max-width: 667px)" srcset="{{ base_url }}/image/titian_nr6_small.jpg?w=280&h=280&crop-to-fit">
                 <img src="{{ base_url }}/image/titian_nr6_small.jpg?w=280&h=280&crop-to-fit" alt="picture of Martin Guva edited" />
             </picture>
