--- a/themes/martin/scss/gallery.scss
+++ b/themes/martin/scss/gallery.scss
@@ -45,7 +45,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    max-width: 100%;
     height: auto;
     grid-column: span 3;
 }
