--- a/themes/martin/analys.twig
+++ b/themes/martin/analys.twig
@@ -49,7 +49,7 @@
     </div>
     </header>
     <div class="main" id="main" role="main">
-        <div class="container">
+        <div class="analys-container">
           {{content}}
         </div>
     </div>
