--- a/themes/martin/scss/style.scss
+++ b/themes/martin/scss/style.scss
@@ -45,11 +45,11 @@ img embed object video {
 }
 
 .site-header a {
-    color: $background-gray2;
+    color: $white-redhue;
 }
 
 .site-header a:visited {
-    color: $background-gray2;
+    color: $white-redhue;
 }
 
 .site-header a:hover {
@@ -116,6 +116,11 @@ img embed object video {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.analys-container {
+    width: 70%;
+
 }
 
 @media (max-width: 960px) {
