--- a/themes/martin/css/style.css
+++ b/themes/martin/css/style.css
@@ -26167,6 +26167,12 @@ img embed object video {
   color: #f5f0f0;
 }
 
+.container {
+  text-align: center;
+  max-width: 48em;
+  margin: 0 auto;
+}
+
 .site-header a:hover {
   color: #fff;
 }
