--- a/themes/martin/scss/style.scss
+++ b/themes/martin/scss/style.scss
@@ -52,6 +52,12 @@ img embed object video {
     color: $white-redhue;
 }
 
+.container {
+    text-align: center;
+    max-width: 48em;
+    margin: 0 auto;
+}
+
 .site-header a:hover {
     color: $white;
 }
@@ -120,7 +126,6 @@ img embed object video {
 
 .analys-container {
     width: 70%;
-
 }
 
 @media (max-width: 960px) {
